== 0.3.3 / 0.4.0

* Corrected OAuth XMPP namespace (Seth)
* Improved error handling for invalid Authorization headers (Matt Sanford)
* Fixed signatures for non-ASCII under $KCODE other than 'u' (Matt Sanford)

== 0.3.2 2009-03-23

* 2xx statuses should be treated as success (Anders Conbere)
* Support applications using the MethodOverride Rack middleware (László Bácsi)
* `authorize` command for `oauth` CLI (Seth)
* Initial support for Problem Reporting extension (Seth)
* Verify SSL certificates if CA certificates are available (Seth)
* Fixed ActionController parameter escaping behavior (Thiago Arrais, László
  Bácsi, Brett Gibson, et al)
* Fixed signature calculation when both options and a block were provided to
  OAuth::Signature::Base#initialize (Seth)
* Added help to the 'oauth' CLI (Seth)
* Fixed a problem when attempting to normalize MockRequest URIs (Seth)

== 0.3.1 2009-1-26

* Fixed a problem with relative and absolute token request paths. (Michael
  Wood)

== 0.3.0 2009-1-25

* Support ActionController::Request from Edge Rails (László Bácsi)
* Correctly handle multi-valued parameters (Seth)
* Added #normalized_parameters to OAuth::RequestProxy::Base (Pelle)
* OAuth::Signature.sign and friends now yield the RequestProxy instead of the
  token when the passed block's arity is 1. (Seth)
* Token requests are made to the configured URL rather than generating a
  potentially incorrect one.  (Kellan Elliott-McCrea)
* Command-line app for generating signatures. (Seth)
* Improved test-cases and compatibility for encoding issues. (Pelle)

== 0.2.7 2008-9-10 The lets fix the last release release

* Fixed plain text signatures (Andrew Arrow)
* Fixed RSA requests using OAuthTokens. (Philip Lipu Tsai)

== 0.2.6 2008-9-9 The lets RSA release

* Improved support for Ruby 1.8.7 (Bill Kocik)
* Fixed RSA verification to support RSA providers
  now using Ruby and RSA
* Improved RSA testing
* Omit token when signing with RSA