@@ -3,6 +3,8 @@
 * Corrected OAuth XMPP namespace (Seth)
 * Improved error handling for invalid Authorization headers (Matt Sanford)
 * Fixed signatures for non-ASCII under $KCODE other than 'u' (Matt Sanford)
+* Fixed edge cases in ActionControllerRequestProxy where params were being
+  incorrectly signed (Marcos Wright Kuhns)
 
 == 0.3.2 2009-03-23
 
